--- a/src/main/webapp/list.xhtml
+++ b/src/main/webapp/list.xhtml
@@ -17,6 +17,7 @@
                     <h:outputText value="#{m.type.displayName}"/>
                 </p:column>
             </p:dataTable>
+            <p:commandButton value="追加"/>
         </h:form>
     </h:body>
 </html>
