--- a/src/main/webapp/detail.xhtml
+++ b/src/main/webapp/detail.xhtml
@@ -11,7 +11,7 @@
         <h1>#{memberBean.edit ? "編集" : "新規"}</h1>
         <h:form id="fm">
             <p:messages id="msg"/>
-            <p:panelGrid>
+            <p:panelGrid id="pnlMember">
                 <p:row>
                     <p:column><p:outputLabel value="名前" for="txtName"/></p:column>
                     <p:column><p:inputText id="txtName" value="#{memberBean.editing.memberName}" required="true"/></p:column>
@@ -80,7 +80,7 @@
 
             </p:panelGrid>
             
-            <p:dataTable value="#{memberBean.editing.socials}" var="s" emptyMessage="SNSは登録されていません">
+            <p:dataTable id="tblSns" value="#{memberBean.editing.socials}" var="s" emptyMessage="SNSは登録されていません">
                 <p:column headerText="名前">
                     <h:outputText value="#{s.name}"/>
                 </p:column>
@@ -92,28 +92,33 @@
                              process="@this" update="dlgInputSns"
                              actionListener="#{memberBean.startSnsCreate()}"
                              oncomplete="PF('dlgInputSnsVar').show()"/>
+            <!-- 
+            URLが一相遅れるのを解決させるためにfaces-redirect=trueする
+            バリデーション不要の場合はimmediate=trueしておく
+            -->
+            <p:commandButton value="作成" action="#{memberBean.doCreate()}" rendered="#{!memberBean.edit}" process="pnlMember" update="pnlMember msg"/>
+            <p:commandButton value="更新" action="#{memberBean.doEdit()}" rendered="#{memberBean.edit}" process="pnlMember" update="pnlMember msg"/>
+            <p:commandButton value="一覧に戻る" action="list?faces-redirect=true" immediate="true" ajax="false"/>
+
             <p:dialog id="dlgInputSns" widgetVar="dlgInputSnsVar" header="SNS入力" modal="true" resizable="false">
                 <p:messages id="msgSns"/>
-            <p:panelGrid columns="2">
+            <p:panelGrid columns="2" id="pnlSns">
                     <p:outputLabel value="SNS名" for="txtSnsName"/>
-                    <p:inputText id="txtSnsName" required="true"/>
+                    <p:inputText id="txtSnsName" required="true" value="#{memberBean.editingSns.name}"/>
                     <p:outputLabel value="アカウント" for="txtSnsAccount"/>
-                    <p:inputText id="txtSnsAccount" required="true"/>
+                    <p:inputText id="txtSnsAccount" required="true" value="#{memberBean.editingSns.account}"/>
                     <f:facet name="footer">
-                        <p:commandButton value="追加"/>
+                        <!-- updateにダイアログを含めてしまうと、閉じてしまう -->
+                        <p:commandButton value="追加"
+                                         action="#{memberBean.doSnsCreate()}"
+                                         process="dlgInputSns" update="tblSns pnlSns msgSns"
+                                         oncomplete="if(!args.validationFailed) PF('dlgInputSnsVar').hide()"
+                                         />
                         <p:commandButton value="閉じる" onclick="PF('dlgInputSnsVar').hide()" immediate="true"/>
                     </f:facet>
                 </p:panelGrid>
 
             </p:dialog>
-            <!-- 
-            URLが一相遅れるのを解決させるためにfaces-redirect=trueする
-            バリデーション不要の場合はimmediate=trueしておく
-            -->
-            <p:commandButton value="作成" action="#{memberBean.doCreate()}" rendered="#{!memberBean.edit}" update=":fm"/>
-            <p:commandButton value="更新" action="#{memberBean.doEdit()}" rendered="#{memberBean.edit}" update=":fm"/>
-            <p:commandButton value="一覧に戻る" action="list?faces-redirect=true" immediate="true" ajax="false"/>
-
         </h:form>
     </h:body>
 </html>
